Parser/feature-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "@startsalt",
      peg$c1 = peg$literalExpectation("@startsalt", false),
      peg$c2 = "}",
      peg$c3 = peg$literalExpectation("}", false),
      peg$c4 = "@endsalt",
      peg$c5 = peg$literalExpectation("@endsalt", false),
      peg$c6 = function(diagram, filelines) {
       return `export default class ${diagram} extends React Component{
       constructor(props){
       	super();
       }
       
       render(){
       	return(
       	<div>
       	${filelines.join("\n\t\t")}
       	</div>
       }
       
       }` ;
      },
      peg$c7 = function(lines) { for (var i = 0; i < lines.length; i++) { if (lines[i]===null) { lines.splice(i, 1); i--; } } return lines; },
      peg$c8 = function() { return null },
      peg$c9 = function() {return null },
      peg$c10 = function() {return null},
      peg$c11 = /^[ \t]/,
      peg$c12 = peg$classExpectation([" ", "\t"], false, false),
      peg$c13 = /^[\r\n]/,
      peg$c14 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c15 = /^[\n]/,
      peg$c16 = peg$classExpectation(["\n"], false, false),
      peg$c17 = "'",
      peg$c18 = peg$literalExpectation("'", false),
      peg$c19 = /^[^\r\n]/,
      peg$c20 = peg$classExpectation(["\r", "\n"], true, false),
      peg$c21 = "..",
      peg$c22 = peg$literalExpectation("..", false),
      peg$c23 = /^[^\r\n.]/,
      peg$c24 = peg$classExpectation(["\r", "\n", "."], true, false),
      peg$c25 = "--",
      peg$c26 = peg$literalExpectation("--", false),
      peg$c27 = /^[^\r\n\-]/,
      peg$c28 = peg$classExpectation(["\r", "\n", "-"], true, false),
      peg$c29 = "__",
      peg$c30 = peg$literalExpectation("__", false),
      peg$c31 = /^[^\r\n_]/,
      peg$c32 = peg$classExpectation(["\r", "\n", "_"], true, false),
      peg$c33 = peg$otherExpectation("whitespace"),
      peg$c34 = /^[ \t\n\r]/,
      peg$c35 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c36 = ",",
      peg$c37 = peg$literalExpectation(",", false),
      peg$c38 = "\n",
      peg$c39 = peg$literalExpectation("\n", false),
      peg$c40 = "\"",
      peg$c41 = peg$literalExpectation("\"", false),
      peg$c42 = function(chars) { return chars.join(""); },
      peg$c43 = "\\",
      peg$c44 = peg$literalExpectation("\\", false),
      peg$c45 = peg$anyExpectation(),
      peg$c46 = function(char) { return char; },
      peg$c47 = function(sequence) { return sequence; },
      peg$c48 = "b",
      peg$c49 = peg$literalExpectation("b", false),
      peg$c50 = function() { return "\b";   },
      peg$c51 = "f",
      peg$c52 = peg$literalExpectation("f", false),
      peg$c53 = function() { return "\f";   },
      peg$c54 = "n",
      peg$c55 = peg$literalExpectation("n", false),
      peg$c56 = function() { return "\n";   },
      peg$c57 = "r",
      peg$c58 = peg$literalExpectation("r", false),
      peg$c59 = function() { return "\r";   },
      peg$c60 = "t",
      peg$c61 = peg$literalExpectation("t", false),
      peg$c62 = function() { return "\t";   },
      peg$c63 = "v",
      peg$c64 = peg$literalExpectation("v", false),
      peg$c65 = function() { return "\x0B"; },
      peg$c66 = "$mandatory(",
      peg$c67 = peg$literalExpectation("$mandatory(", false),
      peg$c68 = function(namecomponent, multiline, lefbracket, midlelement, rightbracket) {
      	return `<MandatoryFeature component=${namecomponent}/>`;
      },
      peg$c69 = "$alternative(",
      peg$c70 = peg$literalExpectation("$alternative(", false),
      peg$c71 = function(namecomponent, multiline, leftbracket, midlelement, rightbracket, rule, namealternative, leftalternative, midlealternative, rightalternative, multialternative) {
      	return `<AlternativeFeature components={[{component:${namecomponent}, rule: },{component:${namealternative}, rule: }]} rule={${rule}}/>`;
      },
      peg$c72 = "$optional(",
      peg$c73 = peg$literalExpectation("$optional(", false),
      peg$c74 = function(namecomponent, multiline, leftbracket, midlelement, rightbracket, rule) {
      	return `<OptionalFeature component=${namecomponent} rules={${rule}}/>`;
      },
      peg$c75 = "$mandatoryInput(",
      peg$c76 = peg$literalExpectation("$mandatoryInput(", false),
      peg$c77 = function(namecomponent) {
      	return `<MandatoryFeature component=${namecomponent}/>`;
      },
      peg$c78 = "$alternativeInput(",
      peg$c79 = peg$literalExpectation("$alternativeInput(", false),
      peg$c80 = function(namecomponent, midlelement, rule, midlealternative, namealternative) {
      	return `<AlternativeFeature components={[{component:${namecomponent}, rule: },{component:${namealternative}, rule: }]} rule={${rule}}/>` ;
      },
      peg$c81 = "$optionalInput(",
      peg$c82 = peg$literalExpectation("$optionalInput(", false),
      peg$c83 = function(namecomponent, midlelement, rule) {
      	return `<OptionalFeature component=${namecomponent} rules={${rule}}/>`;
      },
      peg$c84 = "$mandatoryJson(",
      peg$c85 = peg$literalExpectation("$mandatoryJson(", false),
      peg$c86 = "$optionalJson(",
      peg$c87 = peg$literalExpectation("$optionalJson(", false),
      peg$c88 = function(namecomponent, rule) {
      	return `<OptionalFeature component=${namecomponent} rules={${rule}}/>`;
      },
      peg$c89 = "$alternativeJson(",
      peg$c90 = peg$literalExpectation("$alternativeJson(", false),
      peg$c91 = function(namecomponent, namealternative, rule) {
      	return `<AlternativeFeature components={[{component:${namecomponent}, rule: },{component:${namealternative}, rule: }]} rule={${rule}}/>`;
      },
      peg$c92 = ")",
      peg$c93 = peg$literalExpectation(")", false),
      peg$c94 = function(chars) {
       if(chars[0] === '$'){
         chars[0] = "";
       }
      return chars.join(""); },
      peg$c95 = /^[a-zA-Z0-9\-$]/,
      peg$c96 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "$"], false, false),
      peg$c97 = function(char) {return char;},
      peg$c98 = function(text) { return text },
      peg$c99 = /^[^\n\r]/,
      peg$c100 = peg$classExpectation(["\n", "\r"], true, false),
      peg$c101 = "\r",
      peg$c102 = peg$literalExpectation("\r", false),
      peg$c103 = "!include",
      peg$c104 = peg$literalExpectation("!include", false),
      peg$c105 = "!include_many",
      peg$c106 = peg$literalExpectation("!include_many", false),
      peg$c107 = "!include_once",
      peg$c108 = peg$literalExpectation("!include_once", false),
      peg$c109 = "!procedure",
      peg$c110 = peg$literalExpectation("!procedure", false),
      peg$c111 = "!endprocedure",
      peg$c112 = peg$literalExpectation("!endprocedure", false),
      peg$c113 = "!function",
      peg$c114 = peg$literalExpectation("!function", false),
      peg$c115 = "!endfunction",
      peg$c116 = peg$literalExpectation("!endfunction", false),
      peg$c117 = "!log",
      peg$c118 = peg$literalExpectation("!log", false),
      peg$c119 = "!$",
      peg$c120 = peg$literalExpectation("!$", false),
      peg$c121 = "{",
      peg$c122 = peg$literalExpectation("{", false),
      peg$c123 = function() {return name;},
      peg$c124 = function(banana) {return banana},
      peg$c125 = "$",
      peg$c126 = peg$literalExpectation("$", false),
      peg$c127 = function(apple) {return apple;},
      peg$c128 = function(names) {return names;},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseplantumlfile();

    return s0;
  }

  function peg$parseplantumlfile() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parsenoise();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 10) === peg$c0) {
        s2 = peg$c0;
        peg$currPos += 10;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenamedDiagram();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseopenSaltBracket();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsenewline();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseumllines();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 125) {
                  s7 = peg$c2;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c3); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsenewline();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsenoise();
                    if (s9 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 8) === peg$c4) {
                        s10 = peg$c4;
                        peg$currPos += 8;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c5); }
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsenoise();
                        if (s11 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c6(s3, s6);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseumllines() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseumlline();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseumlline();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseumlline() {
    var s0, s1;

    s0 = peg$parseMandatoryFunction();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAlternativeFunction();
      if (s0 === peg$FAILED) {
        s0 = peg$parseOptionalFunction();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMandatoryInputFunction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseAlternativeInputFunction();
            if (s0 === peg$FAILED) {
              s0 = peg$parseOptionalInputFunction();
              if (s0 === peg$FAILED) {
                s0 = peg$parseMandatoryJsonFunction();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseOptionalJsonFunction();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseAlternativeJsonFunction();
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      s1 = peg$parsecommentline();
                      if (s1 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c8();
                      }
                      s0 = s1;
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parseemptyline();
                        if (s1 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c9();
                        }
                        s0 = s1;
                        if (s0 === peg$FAILED) {
                          s0 = peg$currPos;
                          s1 = peg$parseinclude();
                          if (s1 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c9();
                          }
                          s0 = s1;
                          if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            s1 = peg$parselog();
                            if (s1 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c10();
                            }
                            s0 = s1;
                            if (s0 === peg$FAILED) {
                              s0 = peg$currPos;
                              s1 = peg$parseplantvariable();
                              if (s1 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c10();
                              }
                              s0 = s1;
                              if (s0 === peg$FAILED) {
                                s0 = peg$currPos;
                                s1 = peg$parsedeclaratedFunction();
                                if (s1 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c10();
                                }
                                s0 = s1;
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsenoise() {
    var s0, s1;

    s0 = [];
    if (peg$c11.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c11.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
    }

    return s0;
  }

  function peg$parsenewline() {
    var s0;

    if (peg$c13.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }
    if (s0 === peg$FAILED) {
      if (peg$c15.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
    }

    return s0;
  }

  function peg$parsecommentline() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsenoise();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 39) {
        s2 = peg$c17;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        if (peg$c19.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            if (peg$c19.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c20); }
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsenoise();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsenoise();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c21) {
          s2 = peg$c21;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c22); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          if (peg$c23.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              if (peg$c23.test(input.charAt(peg$currPos))) {
                s4 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c24); }
              }
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c21) {
              s4 = peg$c21;
              peg$currPos += 2;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsenoise();
              if (s5 !== peg$FAILED) {
                s1 = [s1, s2, s3, s4, s5];
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsenoise();
        if (s1 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c25) {
            s2 = peg$c25;
            peg$currPos += 2;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c26); }
          }
          if (s2 !== peg$FAILED) {
            s3 = [];
            if (peg$c27.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c28); }
            }
            if (s4 !== peg$FAILED) {
              while (s4 !== peg$FAILED) {
                s3.push(s4);
                if (peg$c27.test(input.charAt(peg$currPos))) {
                  s4 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c28); }
                }
              }
            } else {
              s3 = peg$FAILED;
            }
            if (s3 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c25) {
                s4 = peg$c25;
                peg$currPos += 2;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c26); }
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parsenoise();
                if (s5 !== peg$FAILED) {
                  s1 = [s1, s2, s3, s4, s5];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsenoise();
          if (s1 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c29) {
              s2 = peg$c29;
              peg$currPos += 2;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c30); }
            }
            if (s2 !== peg$FAILED) {
              s3 = [];
              if (peg$c31.test(input.charAt(peg$currPos))) {
                s4 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c32); }
              }
              if (s4 !== peg$FAILED) {
                while (s4 !== peg$FAILED) {
                  s3.push(s4);
                  if (peg$c31.test(input.charAt(peg$currPos))) {
                    s4 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c32); }
                  }
                }
              } else {
                s3 = peg$FAILED;
              }
              if (s3 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c29) {
                  s4 = peg$c29;
                  peg$currPos += 2;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c30); }
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$parsenoise();
                  if (s5 !== peg$FAILED) {
                    s1 = [s1, s2, s3, s4, s5];
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
